<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/androidhintergrund"
        tools:context=".DogFriendFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="297dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="412dp"
                android:layout_height="295dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dogandsitter" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:layout_marginTop="16dp"
                android:background="#FFAB00"
                android:fontFamily="@font/aclonica"
                android:text="@string/name1"
                android:textColor="#090808"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/frame_33526"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Munich, 2 Miles, Away"
                android:textColor="#FF9800"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/info_Btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="256dp"
                android:backgroundTint="#1C477A"
                android:elevation="5dp"
                android:text="Info"
                android:textColor="#FF6D00"
                android:textColorHint="#0B0A0A"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toTopOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:strokeColor="#FF6D00" />

            <Button
                android:id="@+id/feedback_Btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1C477A"
                android:elevation="5dp"
                android:text="Feedback"
                android:textColor="#AEADAD"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/info_Btn"
                app:layout_constraintStart_toEndOf="@+id/info_Btn"
                app:layout_constraintTop_toTopOf="@+id/info_Btn"
                app:strokeColor="#FF6D00" />

            <Button
                android:id="@+id/services_Btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1C477A"
                android:elevation="5dp"
                android:text="Services"
                android:textColor="#AEADAD"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/feedback_Btn"
                app:layout_constraintStart_toEndOf="@+id/feedback_Btn"
                app:layout_constraintTop_toTopOf="@+id/feedback_Btn"
                app:strokeColor="#FF6D00" />

            <androidx.cardview.widget.CardView
                android:id="@+id/searchcard"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/searchbar_text"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/searchbutton_dogfriend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="#8A8787"
                    android:clickable="false"
                    android:elevation="20dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_search_24"
                    tools:ignore="NotSibling" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#C51162"
                android:elevation="25dp"
                android:shadowColor="#8A8787"
                android:text="ToNavigator"
                android:textColor="#00B8D4"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="#E4E3E3"
                app:strokeWidth="2dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="323dp"
                android:layout_height="185dp"
                android:layout_marginStart="50dp"
                android:alpha="0"
                android:src="@drawable/info_bild"
                app:layout_constraintBottom_toTopOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedback_Btn" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="396dp"
                android:layout_height="238dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:alpha="0"
                android:src="@drawable/feedback_text"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_Btn" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="279dp"
                android:layout_height="192dp"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:background="#D3CACA"
                android:src="@drawable/services"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/services_Btn"
                app:layout_constraintTop_toBottomOf="@+id/services_Btn" />

            <ImageView
                android:id="@+id/chatBotButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/chatBotButton"
                android:elevation="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bot_icon_2883144" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:elevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/ellipse_16" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="3dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#FBFAFA"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/camera_open"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#F4F0F0"
                android:clickable="true"
                android:elevation="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_camera_24" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="109dp"
                android:layout_height="114dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/camera_open"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/ellipse_12" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFEFE"
                android:clickable="true"
                android:contentDescription="@string/bell_inactiv"
                android:elevation="20dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/camera_open"
                app:layout_constraintEnd_toEndOf="@+id/chatBotButton"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="@+id/chatBotButton"
                app:layout_constraintTop_toBottomOf="@+id/chatBotButton"
                app:layout_constraintVertical_bias="0.493"
                app:srcCompat="@drawable/ic_baseline_doorbell_24" />

            <ImageView
                android:id="@+id/bellactiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFD600"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/camera_open"
                app:layout_constraintEnd_toEndOf="@+id/chatBotButton"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="@+id/chatBotButton"
                app:layout_constraintTop_toBottomOf="@+id/chatBotButton"
                app:layout_constraintVertical_bias="0.506"
                app:srcCompat="@drawable/ic_baseline_doorbell_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


</layout>